Revision history for IPC::SRLock

0.29.1    2016-02-13 17:46:53
          - Added broken smoker to exception list

0.28.1    2016-02-03 02:42:14
          - Constructor accepts builder config lock_attributes
          - Full coverage achieved
          - Reset throws if pids do not match
            Adjusted Async::IPC::Semaphore to pass pid to child
          - Enhanced constructor to accept builder argument
          - Improved program flow

0.27.1    2016-01-03 00:09:50
          - More idiomatic name for function package
          - Improved test coverage
          - Added coverage badge
          - Refactored smoker exceptions to dump file
          - Updated Travis configuration and toolchain
          - Updated prereqs
          - Toolchain updates

0.26.1    2015-05-28 19:07:29
          - Dropped exception_class attribute
          - Added Constants Expception_Class

0.25.1    2015-05-18 14:47:51
          - Don't try to untaint undef on BUILDARGS
          - Added MANIFEST to repository to keep Travis happy
          - Added public repository and badges
          - Added Fake lock type
          - Untaint type arg and add qualifying
          - Now using exception classes
          - Switched to private lexical subs

0.24.1    2014-11-10 16:38:26
          - Dropped atomic shm file writes from ::Fcntl. Unecessary
          - Added async option. Blocks for memcached implementation
          - Optimized and retested memcache backend

0.23.1    2014-09-15 15:51:17
          - Replaced namespace::sweep with namespace::autoclean
          - Updated prereqs

0.22.1    2014-05-06 12:22:47
          - Removed Ident and VERSION lines
          - Remove prereqs below min perl ver
          - Stopped using _normalize_prereqs in Build.PL. My bad
          - Use DZ::P::AbstractFromPOD and LicenseFromModule

0.21.1    2013-11-27 15:25:41
          - Module::Build backwardly incompatible change around 0.4200