@@ -1,5 +1,7 @@
 Revision history for IPC::SRLock
 
+          - Fixes missing lockfile attribute
+
 0.29.1    2016-02-13 17:46:53
           - Added broken smoker to exception list
 
